--- a/projects.html
+++ b/projects.html
@@ -32,11 +32,11 @@
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
            </button>
-           <a class="navbar-brand" href="./index.html">Songtaba</a>
+           <a class="navbar-brand" href=".">Songtaba</a>
          </div>
          <div id="navbar" class="collapse navbar-collapse">
            <ul class="nav navbar-nav">
-             <li><a href="./index.html">Home</a></li>
+             <li><a href=".">Home</a></li>
              <li><a href="./about.html">About</a></li>
              <li class="active"><a href="./projects.html">Projects</a></li>
            </ul>
